--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "angular-enterprise-blueprint",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=20",
+    "npm": ">=10"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,11 +16,18 @@
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
     "lint": "eslint \"src/**/*.{ts,html}\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "npm run docs:json && ng run angular-enterprise-blueprint:storybook",
+    "build-storybook": "npm run docs:json && ng run angular-enterprise-blueprint:build-storybook",
+    "docs": "compodoc -p tsconfig.doc.json -d docs/api --theme material",
+    "docs:serve": "compodoc -p tsconfig.doc.json -d docs/api --theme material -s",
+    "docs:json": "compodoc -p .storybook/tsconfig.doc.json -e json -d ."
   },
   "prettier": {
     "printWidth": 100,
+    "tabWidth": 2,
     "singleQuote": true,
+    "trailingComma": "all",
     "plugins": [
       "prettier-plugin-organize-imports"
     ],
@@ -39,33 +50,44 @@
   "private": true,
   "packageManager": "npm@11.7.0",
   "dependencies": {
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.0",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/router": "^21.0.0",
-    "eslint": "^9.39.2",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
-    "prettier": "^3.7.4",
-    "prettier-plugin-organize-imports": "^4.3.0",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/forms": "^21.0.6",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/router": "^21.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.2100.3",
+    "@angular-devkit/build-angular": "^21.0.3",
+    "@angular-devkit/core": "^21.0.3",
     "@angular/build": "^21.0.3",
     "@angular/cli": "^21.0.3",
-    "@angular/compiler-cli": "^21.0.0",
+    "@angular/compiler-cli": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
+    "@compodoc/compodoc": "^1.1.32",
     "@playwright/test": "^1.57.0",
+    "@storybook/addon-a11y": "^10.1.10",
+    "@storybook/addon-docs": "^10.1.10",
+    "@storybook/addon-onboarding": "^10.1.10",
+    "@storybook/angular": "^10.1.10",
     "@typescript-eslint/parser": "^8.50.0",
     "@vitest/coverage-v8": "^4.0.16",
     "angular-eslint": "^21.1.0",
+    "eslint": "^9.39.2",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-boundaries": "^5.3.1",
-    "happy-dom": "^20.0.11",
+    "eslint-plugin-storybook": "^10.1.10",
+    "husky": "^9.1.7",
+    "jsdom": "^27.3.0",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "storybook": "^10.1.10",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.50.0",
     "vitest": "^4.0.16"
