--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+*storybook.log
+storybook-static
+
+# Compodoc
+documentation.json
+/docs/api
