--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       "eslint --fix",
       "prettier --write"
     ],
+    "*.{js,mjs}": "prettier --write",
     "*.{scss,json,md}": "prettier --write"
   },
   "private": true,
@@ -56,6 +57,7 @@
     "@angular/forms": "^21.0.6",
     "@angular/platform-browser": "^21.0.6",
     "@angular/router": "^21.0.6",
+    "@jsverse/transloco": "^8.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
