--- a/angular.json
+++ b/angular.json
@@ -105,7 +105,7 @@
             "browserTarget": "angular-enterprise-blueprint:build",
             "compodoc": true,
             "compodocArgs": ["-e", "json", "-d", "."],
-            "outputDir": "storybook-static"
+            "outputDir": "dist/storybook"
           }
         }
       }
