--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@angular/platform-browser": "^21.0.6",
     "@angular/router": "^21.0.6",
     "@jsverse/transloco": "^8.2.0",
+    "@ngrx/signals": "^21.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
