--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=false",
     "test:watch": "ng test --watch",
     "test:coverage": "ng test --coverage",
     "e2e": "playwright test",
@@ -59,6 +59,9 @@
     "@angular/platform-browser": "^21.0.6",
     "@angular/router": "^21.0.6",
     "@jsverse/transloco": "^8.2.0",
+    "@ng-icons/core": "^33.0.0",
+    "@ng-icons/heroicons": "^33.0.0",
+    "@ng-icons/ionicons": "^33.0.0",
     "@ngrx/signals": "^21.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
