--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "storybook": "^10.1.10",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.50.0",
+    "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.16"
   }
 }
