--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@ng-icons/core": "^33.0.0",
     "@ng-icons/heroicons": "^33.0.0",
     "@ng-icons/ionicons": "^33.0.0",
+    "@ngrx/operators": "^21.0.1",
     "@ngrx/signals": "^21.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
