--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@storybook/addon-onboarding": "^10.1.10",
     "@storybook/angular": "^10.1.10",
     "@typescript-eslint/parser": "^8.50.0",
+    "@vitest/coverage-istanbul": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
     "angular-eslint": "^21.1.0",
     "eslint": "^9.39.2",
