--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,11 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Create Environment Files
+        run: |
+          cp src/environments/environment.example.ts src/environments/environment.ts
+          cp src/environments/environment.example.ts src/environments/environment.prod.ts
+
       - name: Install dependencies
         run: npm ci
 
@@ -45,6 +50,11 @@ jobs:
         with:
           node-version: 20
           cache: npm
+
+      - name: Create Environment Files
+        run: |
+          cp src/environments/environment.example.ts src/environments/environment.ts
+          cp src/environments/environment.example.ts src/environments/environment.prod.ts
 
       - name: Install dependencies
         run: npm ci
@@ -70,6 +80,11 @@ jobs:
         with:
           node-version: 20
           cache: npm
+
+      - name: Create Environment Files
+        run: |
+          cp src/environments/environment.example.ts src/environments/environment.ts
+          cp src/environments/environment.example.ts src/environments/environment.prod.ts
 
       - name: Install dependencies
         run: npm ci
@@ -97,6 +112,11 @@ jobs:
         with:
           node-version: 20
           cache: npm
+
+      - name: Create Environment Files
+        run: |
+          cp src/environments/environment.example.ts src/environments/environment.ts
+          cp src/environments/environment.example.ts src/environments/environment.prod.ts
 
       - name: Install dependencies
         run: npm ci
