--- a/angular.json
+++ b/angular.json
@@ -42,13 +42,17 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "750kB"
+                  "maximumWarning": "750kB",
+                  "maximumError": "1MB"
                 },
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumError": "6kB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "100kB"
                 }
               ],
               "fileReplacements": [
