--- a/.github/workflows/update-metrics.yml
+++ b/.github/workflows/update-metrics.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Update Metrics File
         run: node tools/update-metrics.js
 
+      - name: Disable Git Hooks
+        run: git config --global core.hooksPath /dev/null
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
