fix(ci): restrict update-metrics PR to only include metrics.json

--- a/.github/workflows/update-metrics.yml
+++ b/.github/workflows/update-metrics.yml
@@ -62,3 +62,5 @@ jobs:
           labels: |
             automation
             metrics
+          add-paths: |
+            src/assets/data/metrics.json
