chore(storybook): added test-runner package, doc update

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky",
     "storybook": "npm run docs:json && ng run angular-enterprise-blueprint:storybook",
     "build-storybook": "npm run docs:json && ng run angular-enterprise-blueprint:build-storybook",
+    "test-storybook": "test-storybook",
     "docs": "compodoc -p tsconfig.doc.json -d docs/api --theme material",
     "docs:build": "compodoc -p tsconfig.doc.json -d dist/documentation --theme material",
     "docs:serve": "compodoc -p tsconfig.doc.json -d docs/api --theme material -s",
@@ -99,10 +100,12 @@
     "@storybook/addon-docs": "^10.1.10",
     "@storybook/addon-onboarding": "^10.1.10",
     "@storybook/angular": "^10.1.10",
+    "@storybook/test-runner": "^0.24.2",
     "@typescript-eslint/parser": "^8.50.0",
     "@vitest/coverage-istanbul": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
     "angular-eslint": "^21.1.0",
+    "axe-playwright": "^2.2.2",
     "commit-and-tag-version": "^12.6.1",
     "eslint": "^9.39.2",
     "eslint-import-resolver-typescript": "^4.4.4",
