--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "release:first": "commit-and-tag-version --first-release",
     "prettier": "prettier --write .",
     "lint:md": "markdownlint-cli2 '**/*.md' '#node_modules'",
+    "metrics:generate": "node scripts/generate-metrics.js",
     "postinstall": "node scripts/ensure-env.js"
   },
   "prettier": {
