--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-enterprise-blueprint",
   "version": "2.1.0",
   "engines": {
-    "node": ">=20",
+    "node": "^22.12.0",
     "npm": ">=10"
   },
   "scripts": {
