--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
     "serve:coverage": "http-server coverage/angular-enterprise-blueprint -o",
+    "serve:lighthouse": "http-server .lighthouseci -o",
     "lint": "eslint \"src/**/*.{ts,html}\"",
     "prepare": "husky",
     "storybook": "npm run docs:json && ng run angular-enterprise-blueprint:storybook",
