--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "release:first": "commit-and-tag-version --first-release",
     "prettier": "prettier --write .",
     "lint:md": "markdownlint-cli2 '**/*.md' '#node_modules'",
+    "duplication": "jscpd src/app --ignore \"**/*.spec.ts,**/*.stories.ts,**/*.json,**/*.md,**/environments/**\" --reporters json --output reports/jscpd",
     "metrics:generate": "node scripts/generate-metrics.js",
     "postinstall": "node scripts/ensure-env.js"
   },
@@ -121,6 +122,7 @@
     "eslint-plugin-storybook": "^10.1.10",
     "http-server": "^14.1.1",
     "husky": "^9.1.7",
+    "jscpd": "^4.0.7",
     "jsdom": "^27.3.0",
     "lint-staged": "^16.2.7",
     "markdownlint-cli2": "^0.20.0",
