fix: regenerate metrics after Lighthouse CI in deployment
- Adds metrics generation step after Lighthouse CI and tests
- Ensures fresh Lighthouse scores are included in deployment
- Fixes discrepancy between dashboard scores and actual report

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,11 @@ jobs:
       - name: Run Tests
         run: npm run test:coverage
 
-      # 5. Merge Artifacts into the browser output folder
+      # 6. Generate Fresh Metrics
+      - name: Generate Dashboard Metrics
+        run: npm run metrics:generate
+
+      # 7. Merge Artifacts into the browser output folder
       - name: Merge Artifacts
         run: |
           echo "Verifying build artifacts..."
