fix: remove upload.target override to sync Lighthouse scores
- Removes --upload.target=filesystem override from Lighthouse CI step
- Allows lighthouserc.json to control upload settings (temporary-public-storage)
- Ensures JSON reports (lhr-*.json) are saved locally
- Fixes metrics script finding fresh Lighthouse scores
- Dashboard scores will match actual Lighthouse report after deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Run Lighthouse CI
         run: |
           npm install -g @lhci/cli@0.14.x
-          lhci autorun --collect.staticDistDir=dist/angular-enterprise-blueprint/browser --upload.target=filesystem --config=lighthouserc.json || echo "Lighthouse CI completed with warnings"
+          lhci autorun --collect.staticDistDir=dist/angular-enterprise-blueprint/browser --config=lighthouserc.json || echo "Lighthouse CI completed with warnings"
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
